# supervaizer

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.compiled.md  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  justfile  pyproject.toml  refactor_imports.py  start_server.py  start_server_with_reload.py  test_admin.py  test_dockerfile_generation.py  test_local.py  walkthrough.md
.agent/: inherits.yaml  project.md
.agent/skills/: git.md  test.md
.agent/skills/javascript/: nodejs.md  react.md
.agent/skills/python/: fastapi.md  uv.md
.agents/skills/: cloud-run-basics  cloudformation-to-pulumi  google-cloud-networking-observability  google-cloud-recipe-auth  google-cloud-waf-cost-optimization  google-cloud-waf-operational-excellence  google-cloud-waf-performance-optimization  google-cloud-waf-reliability  google-cloud-waf-security  package-usage  provider-upgrade  pulumi-arm-to-pulumi  pulumi-automation-api  pulumi-best-practices  pulumi-cdk-to-pulumi  pulumi-component  pulumi-esc  pulumi-neo-handoff  pulumi-terraform-to-pulumi  pulumi-upgrade-provider  upstream-patches
.githooks/: post-commit
.github/: LICENSE.txt  dependabot.yml  release.yml
.github/workflows/: publish-pypi.yml  publish.yml  python-package.yml  release.yml  security-scan.yml  trufflehog-full-scan.yml  trufflehog-security.yml
docs/: 2025_04_API_REFERENCE.md  2025_08_ADMIN_README.md  2025_08_CLI.md  2025_08_PARAMETER_VALIDATION_IMPLEMENTATION.md  2025_08_PERSISTENCE.md  2025_08_PROTOCOLS.md  2025_08_REST_API.md  2025_10_LOCAL_TESTING.md  2026_05_PROTOCOLS.md  2026_05_SUPERVAIZER_v2.md  2026_05_WORKSPACE_AGENT_GRANTS.md  2026_07_SECURITY_REVIEW.md  ADMIN_README.md  CASES_BATCH_EVENT.md  CHANGELOG.md  CLI.md  LOCAL_TESTING.md  PARAMETER_VALIDATION_IMPLEMENTATION.md  PERSISTENCE.md  PROTOCOLS.md  REST_API.md  model_reference.md
docs/api/: openapi.json
docs/model_reference/: model_core.md  model_extra.md
docs/rfc/: 001-cloud-deployment-cli.md  002-async-http-client.md  2025_10_001-cloud-deployment-cli.md  2026_04_002-async-http-client.md
docs/superpowers/plans/: 2026-03-16-manage-hello-world.md  2026-04-08-dynamic-choices.md  2026_03_2026-03-16-manage-hello-world.md  2026_04_2026-04-08-dynamic-choices.md
docs/superpowers/specs/: 2026-03-16-manage-hello-world-design.md  2026_03_2026-03-16-manage-hello-world-design.md
examples/: a2a-controller.py
src/supervaizer/: __init__.py  __version__.py  account.py  account_service.py  agent.py  analytics_resource.py  analytics_routes.py  case.py  cli.py  common.py  context.py  contracts.py  data_resource.py  data_routes.py  event.py  instructions.py  job.py  job_service.py  lifecycle.py  parameter.py  py.typed  routes.py  scheduled_steps.py  server.py  server_config.py  server_info.py  server_registration.py  server_utils.py  storage.py  studio_handshake.py  telemetry.py  workspace_authorization.py
src/supervaizer/access/: __init__.py  api_auth.py  client_ip.py  tailscale.py
src/supervaizer/admin/: ip_allowlist.py  routes.py  workbench_routes.py
src/supervaizer/admin/templates/: agent_detail.html  agents.html  agents_grid.html  base.html  case_detail.html  cases_list.html  cases_table.html  console.html  dashboard.html  index.html  job_detail.html  job_start_test.html  jobs_list.html  jobs_table.html  navigation.html  recent_activity.html  server.html  server_status_cards.html  supervaize_instructions.html  workbench.html  workbench_console.html  workbench_jobs_list.html  workbench_monitor.html
src/supervaizer/deploy/: Dockerfile.template  __init__.py  cli.py  docker.py  driver_factory.py  health.py  state.py  utils.py
src/supervaizer/deploy/commands/: __init__.py  clean.py  down.py  local.py  plan.py  status.py  up.py
src/supervaizer/deploy/drivers/: __init__.py  aws_app_runner.py  base.py  cloud_run.py  do_app_platform.py
src/supervaizer/examples/: a2a-controller.py  controller-template.py  controller_template.py  hello_world_agent.py  local_server.py
src/supervaizer/protocol/: __init__.py
src/supervaizer/routers/: __init__.py  api.py  private.py  public.py
src/supervaizer/utils/: __init__.py  version_check.py
supervaize_control/: __init__.py  __version__.py  account.py  agent.py  case.py  common.py  controller.py  event.py  instructions.py  job.py  parameter.py  routes.py  secret.py  server.py  server_utils.py  telemetry.py
supervaizer/: __init__.py  __version__.py  a2a.py  account.py  account_service.py  acp.py  agent.py  case.py  cli.py  common.py  event.py  instructions.py  job.py  job_service.py  lifecycle.py  parameter.py  routes.py  server.py  server_utils.py  telemetry.py
supervaizer/protocol/: __init__.py
supervaizer/protocol/a2a/: __init__.py  model.py  routes.py
supervaizer/protocol/acp/: __init__.py  model.py  routes.py
tests/: __init__.py  conftest.py  mock_api_responses.py  test_a2a.py  test_access_api_auth.py  test_access_client_ip.py  test_access_tailscale.py  test_account.py  test_account_service.py  test_acp.py  test_admin_ip_allowlist.py  test_admin_routes.py  test_agent.py  test_analytics_resource.py  test_case.py  test_cli.py  test_common.py  test_context_client.py  test_contracts.py  test_data_resource.py  test_deploy_clean.py  test_deploy_commands.py  test_deploy_drivers.py  test_deploy_health.py  test_deploy_local_testing.py  test_deploy_phase1.py  test_entity_repository.py  test_event.py  test_full_integration.py  test_instructions.py  test_job.py  test_job_service.py  test_lifecycle.py  test_parameter.py  test_routes.py  test_routes_case_update.py  test_scheduled_steps.py  test_secret.py  test_server.py  test_server_refactor_modules.py  (+5 more)
tests/fixtures/supervaizer_v2/: agent_interviewer_mvp.json
tools/: dev_version.py  export_openapi.py  gen_model_docs.py  get_applied_but_branch_id.py  gh-release-latest-tag.sh  persistence_test.py  reconcile-release-after-ship.sh  start_server.py  start_server_with_reload.py  storage_example.py  test_admin.py  test_startup_loading.py
(+17 files in other folders)
