[project]
name = "supervaizer"
description = "Controller system for Supervaize"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alain Prasquier - Supervaize", email = "alain@supervaize.com" },
]
dependencies = [
    "art>=6.5",
    "cryptography>=48.0.0",
    "demjson3>=3.0.0",
    "deprecated>=1.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "packaging>=26.2.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.0",
    "rich>=15.0.0",
    "shortuuid>=1.0.0",
    "sse-starlette>=3.4.3",
    "tinydb>=4.8.2",
    "typer>=0.25.1",
    "uvicorn>=0.46.0",
]
license = "MPL-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["AI", "controller", "workflow", "supervaize", "agent", "agentic"]
dynamic = ["version"]

[project.urls]
Homepage = "https://supervaize.com"
Repository = "https://github.com/supervaize/supervaizer"
Documentation = "https://doc.supervaize.com"

[project.scripts]
supervaizer = "supervaizer.cli:app"

[project.optional-dependencies]
deploy = [
    "boto3>=1.43.6",
    "docker>=7.0.0",
    "google-cloud-artifact-registry>=1.21.0",
    "google-cloud-run>=0.16.0",
    "google-cloud-secret-manager>=2.28.0",
]
dev = [
    "boto3>=1.42.73",
    "docker>=7.0.0",
    "hatch>=1.16.5",
    "jsonschema>=4.26.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "yamllint>=1.38.0",
    "types-deprecated>=1.3.1",
    "types-PyYAML>=6.0.0",
    "types-python-slugify>=8.0.2.20240310",

]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "db: calls to the database",
    "current: test under development",
]
#addopts = "--cov=supervaizer --cov-report=term --cov-report=html"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch]
[tool.hatch.build.targets.sdist]
include = ["src/", "README.md"]

[tool.hatch.build.targets.wheel.force-include]
"src/supervaizer/py.typed" = "supervaizer/py.typed"

[tool.hatch.version]
path = "src/supervaizer/__version__.py"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]             # unused imports
"tests/*" = ["N802", "N803", "N806"] # test function naming

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
# Match Cursor style: keep opening brace on same line as call, e.g. append({ ... })
preview = true

[tool.commitizen]
name = "cz_gitmoji"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
allow_untyped_globals = false
no_implicit_optional = true
mypy_path = "src"
disallow_any_expr = false

[tool.bumpversion]
current_version = "0.19.0"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
message = "chore(release): v{new_version}"
# Optional .devN is stripped on bump (CI publishes X.Y.Z only); use `just version-dev on` locally.
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "src/supervaizer/__version__.py"
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
